Added database models, services, controllers, and context to the development branch:
-HackerNewsContext
-HackerNewsCrawlerService
-HackerNewsCrawlerController
-EntryModel
-UsageDataModel

--- a/WebCrawlerAPI/appsettings.json
+++ b/WebCrawlerAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "HackerNewsDatabase": ""
+    "HackerNewsDatabase": "Server=localhost; Database=HackerNewsDb; Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
