Added auth models, controllers, and context to the development branch:
-AuthController
-UserModel

Add authorization token to the other controllers methods:

-HackerNewsCrawlerController

Update usage model to include user information request:

-UsageDataModel

--- a/WebCrawlerAPI/appsettings.json
+++ b/WebCrawlerAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Jwt": {  
+    "Key": "SecretKey123456789abcdefghijk123456789lmnopqr",
+    "Issuer": "WebCrawler",
+    "Audience": "Users",
+    "ExpiryMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
